--- a/services.html
+++ b/services.html
@@ -78,8 +78,7 @@
                         <h4 class="card-title">Organizing Committee Member of SE events</h4>
                         <p class="card-text text-justify small">
                             <a href="https://dsd-seaa2023.com/seaa/" target="blank">49th Euromicro Conference on
-                                Software Engineering and Advanced Applications</a>: Program
-                            Chair<br />
+                                Software Engineering and Advanced Applications</a>: Program Chair<br />
                             <a href="http://sattose.org/2023/" target="blank">15th Seminar on Advanced Techniques &
                                 Tools for Software Evolution</a>: Program Chair<br />
                             <a href="https://sesalabunisa.github.io/ISSSE-2023/" target="blank">16th
@@ -125,6 +124,7 @@
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops (Research Track)</h4>
                         <p class="card-text text-justify small">
                             ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE): 2024<br />
+                            IEEE/ACM International Conference on Mining Software Repositories (MSR): 2024, 2023, 2022<br />
                             IEEE International Conference on Program Comprehension (ICPC): 2024, 2023, 2022, 2020<br />
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering
                             (SANER): 2024, 2023, 2022, 2021, 2020<br />
@@ -135,7 +135,6 @@
                             IEEE/ACM International Conference on Software Engineering (ICSE): 2023 (Software Engineering in Practice Track)<br />
                             IEEE/ACM International Conference on Mobile Software Engineering and Systems
                             (MOBILESoft): 2023, 2022, 2021<br />
-                            IEEE/ACM International Conference on Mining Software Repositories (MSR): 2023, 2022<br />
                             International Workshop on ENgineering Intelligent Applications' Code: 2023<br />
                             International Workshop on Machine Learning Techniques for Software Quality Evaluation
                             (MaLTeSQuE): 2022, 2021, 2020, 2019, 2018<br />
