Add new courses and projects. Remove Researchgate. Minor fixes to services.

--- a/projects.html
+++ b/projects.html
@@ -72,9 +72,33 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column">
             <div class="my-auto">
                 <h2 class="mb-2">Current Projects</h2>
+
+                <div class="card card-horizontal mb-2">
+                    <div class="card-body">
+                        <h4 class="card-title">RECHARGE</h4>
+                        <h6>Funder: MIUR - PRIN: Progetti di Ricerca di Rilevante Interesse Nazionale – Bando 2022 PNRR</h6>
+                        <h6>Role: Unit Leader</h6>
+                        <p class="card-text text-justify small">Modern software systems are heterogeneous and feature
+                            different non-functional requirements. For example, smartphones have limited battery life
+                            and require software optimized to reduce energy consumption. Embedded systems often come
+                            with performance-critical requirements specifying precise time windows in which a task must
+                            be executed. Nevertheless, most issues reported during software testing are related to
+                            software crashes or incorrect system responses, while system performance degradations are
+                            often neglected. The problem is even more relevant in Continuous Integration and Deployment
+                            (CI/CD), where software is built on a dedicated infrastructure every time a change is
+                            pushed.
+                            Automated performance testing in CI/CD is still an ongoing effort. RECHARGE is a novel
+                            automated framework for automating performance testing in CI/CD pipelines
+                            leveraging static analysis and search-based algorithms. </p>
+                        <!--<p class="card-text"><a href="http://radon-h2020.eu/" target="_blank">Web Site</a></p>-->
+                    </div>
+                </div>
+
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
                         <h4 class="card-title">SMARTITUDE</h4>
+                        <h6>Funder: MIUR - PRIN: Progetti di Ricerca di Rilevante Interesse Nazionale – Bando 2022</h6>
+                        <h6>Role: Principal Investigator</h6>
                         <p class="card-text text-justify small">Decentralized finance (DeFi) is changing finance, having
                             prominence from the summer of 2020 with yield farming and the rise of tokens promising
                             attractive yields to crypto traders. DeFi is based on blockchain, a decentralized,
@@ -98,6 +122,8 @@
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
                         <h4 class="card-title">RADON H2020</h4>
+                        <h6>Funder: European Union Horizon 2020</h6>
+                        <h6>Role: Work Package Leader</h6>
                         <p class="card-text text-justify small">RADON aims at creating a DevOps framework to create and
                             manage microservices-based applications that can optimally exploit serverless
                             computing technologies. These applications will include fine-grained and independently
@@ -117,6 +143,8 @@
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
                         <h4 class="card-title">SECO-ASSIST 2018-2021</h4>
+                        <h6>Funder: Fonds de la Recherche Scientifique and Fonds voor Wetenschappelijk Onderzoek – Vlaanderen</h6>
+                        <h6>Role: Work Package Leader</h6>
                         <p class="card-text text-justify small">Software ecosystems are the most promising avenue for
                             organising the software needs of the digital era. Jointly funded by F.R.S.-FNRS and
                             FWO-Vlaanderen, the four-year Excellence of Science Project SECO-ASSIST aims to realise a
@@ -132,6 +160,8 @@
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
                         <h4 class="card-title">INTiMALS</h4>
+                        <h6>Funder: Innoviris</h6>
+                        <h6>Role: Work Package Leader</h6>
                         <p class="card-text text-justify small">This project’s goal is to research and deploy novel
                             pattern mining algorithms in an industrial prototype of an intelligent modernisation
                             assistant for legacy software systems. The assistant pro-actively recommends software
@@ -245,7 +275,7 @@
                     </div>
                 </div>
 
-                <h2 class="mt-5 mb-2">Tools on which I collaborated</h2>
+                <h2 class="mt-5 mb-2">Tools I contributed to</h2>
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
