--- a/services.html
+++ b/services.html
@@ -121,18 +121,24 @@
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
-                        <h4 class="card-title">Program Committee Member of International Conferences and Workshops (Research Track)</h4>
+                        <h4 class="card-title">Program Committee Member of International Conferences and Workshops
+                            (Research Track)</h4>
                         <p class="card-text text-justify small">
-                            ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE): 2024<br />
-                            IEEE/ACM International Conference on Mining Software Repositories (MSR): 2024, 2023, 2022<br />
+                            ACM Joint European Software Engineering Conference and Symposium on the Foundations of
+                            Software Engineering (ESEC/FSE): 2024<br />
+                            IEEE/ACM International Conference on Mining Software Repositories (MSR): 2024, 2023,
+                            2022<br />
                             IEEE International Conference on Program Comprehension (ICPC): 2024, 2023, 2022, 2020<br />
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering
                             (SANER): 2024, 2023, 2022, 2021, 2020<br />
-                            International Conference on Product-Focused Software Process Improvement (PROFES): 2023<br />
+                            International Conference on Product-Focused Software Process Improvement (PROFES):
+                            2023<br />
                             IEEE International Conference on Software Maintenance and Evolution (ICSME): 2023<br />
-                            IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM): 2023, 2022, 2021<br />
+                            IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM): 2023,
+                            2022, 2021<br />
                             European Conference on Service-Oriented and Cloud Computing (ESOCC): 2023<br />
-                            IEEE/ACM International Conference on Software Engineering (ICSE): 2023 (Software Engineering in Practice Track)<br />
+                            IEEE/ACM International Conference on Software Engineering (ICSE): 2023 (Software Engineering
+                            in Practice Track)<br />
                             IEEE/ACM International Conference on Mobile Software Engineering and Systems
                             (MOBILESoft): 2023, 2022, 2021<br />
                             International Workshop on ENgineering Intelligent Applications' Code: 2023<br />
@@ -167,11 +173,13 @@
                         <h4 class="card-title">Invited Talks</h4>
                         <p class="card-text text-justify small">
                             The Quantum Frontier of Software Engineering and its Adoption. SWForum.eu: Workshop on
-                            Future Challenges in SE, Politecnico di Milano, Milan, June 27th, 2023<br />
-                            The Do's and Don'ts of Infrastructure Code: a Systematic Grey Literature Review. Dagstuhl Seminar 23082, Dagstuhl, February 21st, 2023<br />
+                            Future Challenges in SE, Politecnico di Milano, Milan, Italy, June 27th, 2023<br />
+                            The Do's and Don'ts of Infrastructure Code: a Systematic Grey Literature Review. Dagstuhl
+                            Seminar 23082, Dagstuhl, Germany, February 21st, 2023<br />
                             Machine Learning for Software Engineering: the New Gold Rush. Smart Services and Data-driven
-                            Societies Summit, University of Molise, Termoli, July 25th, 2022<br />
-                            Code Smell Detection: the Ecstasy of Machine Learning. Utrecht University, Utrecht, October
+                            Societies Summit, University of Molise, Termoli, Italy, July 25th, 2022<br />
+                            Code Smell Detection: the Ecstasy of Machine Learning. Utrecht University, Utrecht, The
+                            Netherlands, October
                             6th, 2021<br />
                             Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. University of
                             Milano Bicocca, Virtual, July 7th, 2021<br />
