--- a/teaching.html
+++ b/teaching.html
@@ -72,147 +72,196 @@
 
             <h2 class="mb-5">Teaching</h2>
 
-            <div class="row">
-                <div class="col-sm-12">
-                    <h4 class="mb-2">Course Holder</h4>
-                    <div class="table-responsive">
-                        <table class="table table-hover small" style="cursor: pointer;">
-                            <thead class="thead-light">
-                                <tr>
-                                    <th>Course</th>
-                                    <th>Degree</th>
-                                    <th>University</th>
-                                    <th>Period</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Software Dependability</td>
-                                    <td>MSc</td>
-                                    <td>University of Salerno</td>
-                                    <td>Fall 2023<br />
-                                        Spring 2023
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Empirical Research Methods</td>
-                                    <td>PhD</td>
-                                    <td>University of Salerno</td>
-                                    <td>Summer 2023 (co-lectured with <a href="https://fpalomba.github.io/"
-                                            target="blank">F. Palomba</a>)
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Introduction to Machine Learning</td>
-                                    <td>Pre-MSc</td>
-                                    <td>Jheronimus Academy of Data Science</td>
-                                    <td>Spring 2021</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
+            <h3 class="mb-5">Currently Taught Courses</h2>
 
-            <div class="row">
-                <div class="col-sm-12">
-                    <h4 class="mb-2">Lecturer</h4>
-                    <div class="table-responsive">
-                        <table class="table table-hover small" style="cursor: pointer;">
-                            <thead class="thead-light">
-                                <tr>
-                                    <th>Course</th>
-                                    <th>Degree</th>
-                                    <th>University</th>
-                                    <th>Period</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Software Engineering for Secure Cloud Systems</td>
-                                    <td>MSc</td>
-                                    <td>University of Salerno</td>
-                                    <td>Spring 2024 (course holder: <a href="https://docenti.unisa.it/004724/home" target="blank">C. Gravino</a>)
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Funding and Management of Research Projects</td>
-                                    <td>PhD</td>
-                                    <td>University of Salerno</td>
-                                    <td>Winter 2023 (course holder: <a href="https://docenti.unisa.it/003241/en/home"
-                                        target="blank">A. De Lucia</a>)
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Object Oriented Programming</td>
-                                    <td>BSc</td>
-                                    <td>University of Salerno</td>
-                                    <td>Fall 2023 (course holder: <a href="https://docenti.unisa.it/005087/en/home"
-                                        target="blank">V. Deufemia</a>)<br />
-                                        Fall 2022 (course holder: <a href="https://docenti.unisa.it/005087/en/home"
-                                            target="blank">V. Deufemia</a>)
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Software Dependability</td>
-                                    <td>MSc</td>
-                                    <td>University of Salerno</td>
-                                    <td>Spring 2022 (course holder: <a href="https://fpalomba.github.io/"
-                                            target="blank">F. Palomba</a>)
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Software Engineering, Management, and Evolution</td>
-                                    <td>MSc</td>
-                                    <td>University of Salerno</td>
-                                    <td>Spring 2022 (course holder: <a href="https://docenti.unisa.it/003241/en/home"
-                                            target="blank">A. De Lucia</a>)
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Data Engineering</td>
-                                    <td>MSc</td>
-                                    <td>Jheronimus Academy of Data Science</td>
-                                    <td>Fall 2021 (course holder: <a
-                                            href="https://scholar.google.it/citations?user=13xdkw4AAAAJ&hl=en"
-                                            target="blank"> W.J. van den Heuvel</a>)
-                                        <br />Fall 2020 (course holder: <a
-                                        href="https://scholar.google.it/citations?user=13xdkw4AAAAJ&hl=en"
-                                        target="blank"> W.J. van den Heuvel</a>)
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Introduction to Machine Learning</td>
-                                    <td>Pre-MSc</td>
-                                    <td>Jheronimus Academy of Data Science</td>
-                                    <td>Spring 2020 (course holder:
-                                        <a href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
-                                            target="blank">D.A. Tamburri</a>)
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Data Statistics</td>
-                                    <td>BSc</td>
-                                    <td>Tilburg University</td>
-                                    <td>Fall 2019 (course holder: <a
-                                            href="https://www.tilburguniversity.edu/nl/medewerkers/m-c-kaptein"
-                                            target="blank"> M.C. Kaptein</a>)</td>
-                                </tr>
-                                <tr>
-                                    <td>Capita Selecta of Software Engineering</td>
-                                    <td>MSc</td>
-                                    <td>Vrije Universiteit Brussel</td>
-                                    <td>2019/20 (yearly course, course holder: <a
-                                            href="http://soft.vub.ac.be/~cderoove/" target="blank">C. De Roover</a>)
-                                        <br /> 2018/19 (yearly course, course holder: <a
-                                            href="http://soft.vub.ac.be/~cderoove/" target="blank">C. De Roover</a>)
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h4 class="mb-2">Course Holder</h4>
+                        <div class="table-responsive">
+                            <table class="table table-hover small" style="cursor: pointer;">
+                                <thead class="thead-light">
+                                    <tr>
+                                        <th>Course</th>
+                                        <th>Degree</th>
+                                        <th>University</th>
+                                        <th>Period</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Software Dependability</td>
+                                        <td>MSc</td>
+                                        <td>University of Salerno</td>
+                                        <td>Fall 2023<br />
+                                            Spring 2023
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
-            </div>
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h4 class="mb-2">Lecturer</h4>
+                        <div class="table-responsive">
+                            <table class="table table-hover small" style="cursor: pointer;">
+                                <thead class="thead-light">
+                                    <tr>
+                                        <th>Course</th>
+                                        <th>Degree</th>
+                                        <th>University</th>
+                                        <th>Period</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Software Engineering for Secure Cloud Systems</td>
+                                        <td>MSc</td>
+                                        <td>University of Salerno</td>
+                                        <td>Spring 2024 (course holder: <a href="https://docenti.unisa.it/004724/home"
+                                                target="blank">C. Gravino</a>)
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Funding and Management of Research Projects</td>
+                                        <td>PhD</td>
+                                        <td>University of Salerno</td>
+                                        <td>Winter 2023 (course holder: <a
+                                                href="https://docenti.unisa.it/003241/en/home" target="blank">A. De
+                                                Lucia</a>)
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Object Oriented Programming</td>
+                                        <td>BSc</td>
+                                        <td>University of Salerno</td>
+                                        <td>Fall 2023 (course holder: <a href="https://docenti.unisa.it/005087/en/home"
+                                                target="blank">V. Deufemia</a>)<br />
+                                            Fall 2022 (course holder: <a href="https://docenti.unisa.it/005087/en/home"
+                                                target="blank">V. Deufemia</a>)
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+                <h3 class="mb-5">Past Taught Courses</h2>
+
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <h4 class="mb-2">Course Holder</h4>
+                            <div class="table-responsive">
+                                <table class="table table-hover small" style="cursor: pointer;">
+                                    <thead class="thead-light">
+                                        <tr>
+                                            <th>Course</th>
+                                            <th>Degree</th>
+                                            <th>University</th>
+                                            <th>Period</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>Empirical Research Methods</td>
+                                            <td>PhD</td>
+                                            <td>University of Salerno</td>
+                                            <td>Summer 2023 (co-lectured with <a href="https://fpalomba.github.io/"
+                                                    target="blank">F. Palomba</a>)
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Introduction to Machine Learning</td>
+                                            <td>Pre-MSc</td>
+                                            <td>Jheronimus Academy of Data Science</td>
+                                            <td>Spring 2021</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <h4 class="mb-2">Lecturer</h4>
+                            <div class="table-responsive">
+                                <table class="table table-hover small" style="cursor: pointer;">
+                                    <thead class="thead-light">
+                                        <tr>
+                                            <th>Course</th>
+                                            <th>Degree</th>
+                                            <th>University</th>
+                                            <th>Period</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>Software Dependability</td>
+                                            <td>MSc</td>
+                                            <td>University of Salerno</td>
+                                            <td>Spring 2022 (course holder: <a href="https://fpalomba.github.io/"
+                                                    target="blank">F. Palomba</a>)
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Software Engineering, Management, and Evolution</td>
+                                            <td>MSc</td>
+                                            <td>University of Salerno</td>
+                                            <td>Spring 2022 (course holder: <a
+                                                    href="https://docenti.unisa.it/003241/en/home" target="blank">A. De
+                                                    Lucia</a>)
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Data Engineering</td>
+                                            <td>MSc</td>
+                                            <td>Jheronimus Academy of Data Science</td>
+                                            <td>Fall 2021 (course holder: <a
+                                                    href="https://scholar.google.it/citations?user=13xdkw4AAAAJ&hl=en"
+                                                    target="blank"> W.J. van den Heuvel</a>)
+                                                <br />Fall 2020 (course holder: <a
+                                                    href="https://scholar.google.it/citations?user=13xdkw4AAAAJ&hl=en"
+                                                    target="blank"> W.J. van den Heuvel</a>)
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Introduction to Machine Learning</td>
+                                            <td>Pre-MSc</td>
+                                            <td>Jheronimus Academy of Data Science</td>
+                                            <td>Spring 2020 (course holder:
+                                                <a href="https://scholar.google.com/citations?user=l7BGAq8AAAAJ&hl=en"
+                                                    target="blank">D.A. Tamburri</a>)
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Data Statistics</td>
+                                            <td>BSc</td>
+                                            <td>Tilburg University</td>
+                                            <td>Fall 2019 (course holder: <a
+                                                    href="https://www.tilburguniversity.edu/nl/medewerkers/m-c-kaptein"
+                                                    target="blank"> M.C. Kaptein</a>)</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Capita Selecta of Software Engineering</td>
+                                            <td>MSc</td>
+                                            <td>Vrije Universiteit Brussel</td>
+                                            <td>2019/20 (yearly course, course holder: <a
+                                                    href="http://soft.vub.ac.be/~cderoove/" target="blank">C. De
+                                                    Roover</a>)
+                                                <br /> 2018/19 (yearly course, course holder: <a
+                                                    href="http://soft.vub.ac.be/~cderoove/" target="blank">C. De
+                                                    Roover</a>)
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
 
         </section>
 
