--- a/index.html
+++ b/index.html
@@ -77,60 +77,61 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-8">
                         <h3 class="mb-2">About Me</h3>
                         <p>
                             I am an assistant professor at the Department of Computer Science
                             of the <a href="https://www.unisa.it/">University of Salerno</a>.<br />
                             My research is on <b>empirical software engineering</b>, particularly <b>software
                                 maintenance and evolution</b>, <b>software testing</b>, and <b>green software
-                                engineering</b>, where I apply <b>machine
-                                learning</b>, <b>search-based
-                                algorithms</b>, and <b>mining of software repositories</b>.<br />
+                                engineering</b>, where I apply <b>machine learning</b>, <b>search-based algorithms</b>,
+                            and <b>mining of software repositories</b>.<br />
                             I am a member at large of the <a
                                 href="https://www.computer.org/volunteering/boards-and-committees/technical-activities">IEEE
-                                Conference Activities Committee</a>. I serve as editor for
-                            Elsevier Journal of Systems and Software and Elsevier Science of Computer Programming,
-                            program committee member for international conferences, and referee for international
-                            journals in software engineering and artificial intelligence, for which I received several
-                            Distinguished/Outstanding Reviewer Awards.<br />
+                                Conference Activities Committee</a>.<br />
+                            I serve as editor for Elsevier Journal of Systems and Software and Elsevier Science of
+                            Computer Programming.<br />
+                            I am a program committee member of international conferences and a referee for international
+                            journals in software engineering and artificial intelligence.
+                            For my services, I received several distinguished and outstanding reviewer awards.<br />
                             I am an <a
                                 href="https://www.computer.org/csdl/magazine/so/about/13611?title=Initiatives%20Team&periodical=IEEE%20Software">IEEE
-                                Software initiative team member</a> and the social media manager of
-                            Elsevier Science of Computer Programming. I am a member of the <a
-                                href="https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=tosca">TOSCA technical
-                                committee</a>, and I co-lead the "Emerging Compute Platforms ad-hoc".<br />
+                                Software initiative team member</a> and the social media manager of Elsevier Science of
+                            Computer Programming.<br />
 
                             You can find my full Curriculum Vitae <a target="_blank" href="FullCV.pdf">here</a>.</p>
                     </div>
 
-                    <div class="col-sm-6">
+                    <div class="col-sm-4">
                         <h3 class="mb-2">Timeline</h3>
                         <hr />
-                        January 2022 - now<br />
+                        <h5>January 2022 - now</h5>
                         Assistant Professor<br />
-                        University of Salerno - Department of Computer Science
+                        University of Salerno<br />
+                        Department of Computer Science
                         <hr />
-                        January 2020 - December 2021<br />
+                        <h5>January 2020 - December 2021</h5>
                         Assistant Professor<br />
-                        Tilburg University - Jheronimus Academy of Data Science
+                        Tilburg University<br />
+                        Jheronimus Academy of Data Science
                         <hr />
-                        January 2018 - December 2019<br />
+                        <h5>January 2018 - December 2019</h5>
                         Post-doc Researcher<br />
-                        Vrije Universiteit Brussel - Software Languages Lab
+                        Vrije Universiteit Brussel<br />
+                        Software Languages Lab
                         <hr />
-                        December 2014 - March 2018<br />
+                        <h5>December 2014 - March 2018</h5>
                         Ph.D. in Management & Information Technology<br />
                         University of Salerno<br />
                         Advisor: Prof. Andrea De Lucia
                         <hr />
-                        October 2011 - September 2014<br />
+                        <h5>October 2011 - September 2014</h5>
                         Master's degree in Computer Science<br />
                         University of Salerno<br />
                         Advisor: Prof. Andrea De Lucia<br />
                         Grade: 110/110 cum laude
                         <hr />
-                        October 2007 - May 2011<br />
+                        <h5>October 2007 - May 2011</h5>
                         Bachelor degree in Computer Science<br />
                         University of Molise<br />
                         Advisor: Prof. Giovanni Capobianco<br />
