Add TOSEM and remove the social media managment activity for SCICO.

--- a/index.html
+++ b/index.html
@@ -89,15 +89,14 @@
                             I am a member at large of the <a
                                 href="https://www.computer.org/volunteering/boards-and-committees/technical-activities">IEEE
                                 Conference Activities Committee</a>.<br />
-                            I serve as editor for Elsevier Journal of Systems and Software and Elsevier Science of
-                            Computer Programming.<br />
+                            I serve as editor for ACM Transactions on Software Engineering and Methodology, Elsevier
+                            Journal of Systems and Software and Elsevier Science of
+                            Computer Programming, and I am an <a
+                                href="https://www.computer.org/csdl/magazine/so/about/13611?title=Initiatives%20Team&periodical=IEEE%20Software">IEEE
+                                Software initiative team member</a>.<br />
                             I am a program committee member of international conferences and a referee for international
                             journals in software engineering and artificial intelligence.
                             For my services, I received several distinguished and outstanding reviewer awards.<br />
-                            I am an <a
-                                href="https://www.computer.org/csdl/magazine/so/about/13611?title=Initiatives%20Team&periodical=IEEE%20Software">IEEE
-                                Software initiative team member</a> and the social media manager of Elsevier Science of
-                            Computer Programming.<br />
 
                             You can find my full Curriculum Vitae <a target="_blank" href="FullCV.pdf">here</a>.</p>
                     </div>
