--- a/services.html
+++ b/services.html
@@ -77,6 +77,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Organizing Committee Member of SE events</h4>
                         <p class="card-text text-justify small">
+                            <a href="https://dsd-seaa2023.com/seaa/" target="blank">28th International Conference on
+                                Evaluation and Assessment in Software Engineering</a>: Finance Chair<br />
                             <a href="https://dsd-seaa2023.com/seaa/" target="blank">49th Euromicro Conference on
                                 Software Engineering and Advanced Applications</a>: Program Chair<br />
                             <a href="http://sattose.org/2023/" target="blank">15th Seminar on Advanced Techniques &
@@ -108,13 +110,12 @@
                     <div class="card-body">
                         <h4 class="card-title">Editorial Board Member of International Journals</h4>
                         <p class="card-text text-justify small">
+                            ACM Transactions on Software Engineering and Methodology: 2024 - Now<br />
                             Elsevier Science of Computer Programming: 2021 - Now<br />
                             Elsevier Journal of Systems and Software: 2021 - Now<br />
                             IEEE Software - Initiatives Team: 2020 - Now<br />
-                            IEEE Software Blog: 2019 - Now<br />
                             Guest Editor for Elsevier Science of Computer Programming for the special issue on "Software
-                            Health of Software Ecosystems": 2020 -
-                            2021<br />
+                            Health of Software Ecosystems": 2020 - 2021<br />
                         </p>
                     </div>
                 </div>
