Landfill has been on Zenodo for a while

--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,8 @@
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
                         <h4 class="card-title">RECHARGE</h4>
-                        <h6>Funder: MIUR - PRIN: Progetti di Ricerca di Rilevante Interesse Nazionale – Bando 2022 PNRR</h6>
+                        <h6>Funder: MIUR - PRIN: Progetti di Ricerca di Rilevante Interesse Nazionale – Bando 2022 PNRR
+                        </h6>
                         <h6>Role: Unit Leader</h6>
                         <p class="card-text text-justify small">Modern software systems are heterogeneous and feature
                             different non-functional requirements. For example, smartphones have limited battery life
@@ -143,7 +144,8 @@
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
                         <h4 class="card-title">SECO-ASSIST 2018-2021</h4>
-                        <h6>Funder: Fonds de la Recherche Scientifique and Fonds voor Wetenschappelijk Onderzoek – Vlaanderen</h6>
+                        <h6>Funder: Fonds de la Recherche Scientifique and Fonds voor Wetenschappelijk Onderzoek –
+                            Vlaanderen</h6>
                         <h6>Role: Work Package Leader</h6>
                         <p class="card-text text-justify small">Software ecosystems are the most promising avenue for
                             organising the software needs of the digital era. Jointly funded by F.R.S.-FNRS and
@@ -268,10 +270,9 @@
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
                         <h4 class="card-title">Landfill</h4>
-                        <p class="card-text text-justify small">Landfill is a Web-based platform for sharing code smell
-                            datasets. It also provides a set of APIs for programmatically accessing its data. Anyone can
-                            contribute by: improving existing datasets or sharing and posting new datasets.</p>
-                        <p class="card-text"><a href="http://soft.vub.ac.be/landfill/" target="_blank">Web Site</a></p>
+                        <p class="card-text text-justify small">Landfill is a code smell dataset.</p>
+                        <p class="card-text"><a href="https://zenodo.org/records/6080422" target="_blank">Web Site</a>
+                        </p>
                     </div>
                 </div>
 
