--- a/services.html
+++ b/services.html
@@ -125,6 +125,8 @@
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops
                             (Research Track)</h4>
                         <p class="card-text text-justify small">
+                            IEEE/ACM International Conference on Software Engineering - Software Engineering
+                            in Practice Track (ICSE-SEIP): 2025, 2023<br />
                             ACM Joint European Software Engineering Conference and Symposium on the Foundations of
                             Software Engineering (ESEC/FSE): 2024<br />
                             IEEE/ACM International Conference on Mining Software Repositories (MSR): 2024, 2023,
@@ -138,8 +140,6 @@
                             IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM): 2023,
                             2022, 2021<br />
                             European Conference on Service-Oriented and Cloud Computing (ESOCC): 2023<br />
-                            IEEE/ACM International Conference on Software Engineering (ICSE): 2023 (Software Engineering
-                            in Practice Track)<br />
                             IEEE/ACM International Conference on Mobile Software Engineering and Systems
                             (MOBILESoft): 2023, 2022, 2021<br />
                             International Workshop on ENgineering Intelligent Applications' Code: 2023<br />
@@ -155,7 +155,7 @@
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
-                        <h4 class="card-title">Frequent Reviewer for the following International Journals</h4>
+                        <h4 class="card-title">Frequent Reviewer for International Journals</h4>
                         <p class="card-text text-justify small">
                             Empirical Software Engineering - Springer<br />
                             IEEE Software - IEEE<br />
