--- a/teaching.html
+++ b/teaching.html
@@ -87,38 +87,34 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>Software Engineering for Secure Cloud Systems</td>
-                                    <td>MSc</td>
-                                    <td>University of Salerno</td>
-                                    <td>Spring 2024 (course holder: <a href="https://docenti.unisa.it/004724/home"
-                                            target="blank">C. Gravino</a>)
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Funding and Management of Research Projects</td>
-                                    <td>PhD</td>
-                                    <td>University of Salerno</td>
-                                    <td>Winter 2023 (course holder: <a href="https://docenti.unisa.it/003241/en/home"
-                                            target="blank">A. De
-                                            Lucia</a>)
-                                    </td>
-                                </tr>
-                                <tr>
+                                <tr></tr>
                                     <td>Software Dependability</td>
                                     <td>MSc</td>
                                     <td>University of Salerno</td>
-                                    <td>Fall 2023 (course holder)<br />
+                                    <td>Fall 2024 (course holder)<br />
+                                        Fall 2023 (course holder)<br />
                                         Spring 2023 (course holder)<br />
                                         Spring 2022 (course holder: <a href="https://fpalomba.github.io/"
                                             target="blank">F. Palomba</a>)
                                     </td>
                                 </tr>
                                 <tr>
+                                    <td>Software Engineering for Secure Cloud Systems</td>
+                                    <td>MSc</td>
+                                    <td>University of Salerno</td>
+                                    <td>Spring 2025 (course holder: <a href="https://docenti.unisa.it/033024/home"
+                                            target="blank">G. Catolino)</a><br />
+                                        Spring 2024 (course holder: <a href="https://docenti.unisa.it/004724/home"
+                                            target="blank">C. Gravino</a>)
+                                    </td>
+                                </tr>
+                                <tr>
                                     <td>Object Oriented Programming</td>
                                     <td>BSc</td>
                                     <td>University of Salerno</td>
-                                    <td>Fall 2023 (course holder: <a href="https://docenti.unisa.it/005087/en/home"
+                                    <td>Fall 2024 (course holder: <a href="https://docenti.unisa.it/005087/en/home"
+                                        target="blank">V. Deufemia</a>)<br />
+                                        Fall 2023 (course holder: <a href="https://docenti.unisa.it/005087/en/home"
                                             target="blank">V. Deufemia</a>)<br />
                                         Fall 2022 (course holder: <a href="https://docenti.unisa.it/005087/en/home"
                                             target="blank">V. Deufemia</a>)
@@ -145,11 +141,20 @@
                                 </tr>
                             </thead>
                             <tbody>
+                                <tr></tr>
+                                    <td>Funding and Management of Research Projects</td>
+                                    <td>PhD</td>
+                                    <td>University of Salerno</td>
+                                    <td>Winter 2023 (co-lectured with <a href="https://docenti.unisa.it/003241/en/home"
+                                            target="blank">A. De
+                                            Lucia</a>)
+                                    </td>
+                                </tr>
                                 <tr>
                                     <td>Empirical Research Methods</td>
                                     <td>PhD</td>
                                     <td>University of Salerno</td>
-                                    <td>Summer 2023 (course holder - co-lectured with <a
+                                    <td>Summer 2023 (co-lectured with <a
                                             href="https://fpalomba.github.io/" target="blank">F. Palomba</a>)
                                     </td>
                                 </tr>
