--- a/services.html
+++ b/services.html
@@ -125,15 +125,15 @@
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops
                             (Research Track)</h4>
                         <p class="card-text text-justify small">
+                            ACM Joint European Software Engineering Conference and Symposium on the Foundations of
+                            Software Engineering (ESEC/FSE): 2025, 2024<br />
                             IEEE/ACM International Conference on Software Engineering - Software Engineering
                             in Practice Track (ICSE-SEIP): 2025, 2023<br />
-                            ACM Joint European Software Engineering Conference and Symposium on the Foundations of
-                            Software Engineering (ESEC/FSE): 2024<br />
-                            IEEE/ACM International Conference on Mining Software Repositories (MSR): 2024, 2023,
+                            IEEE/ACM International Conference on Mining Software Repositories (MSR): 2025, 2024, 2023,
                             2022<br />
-                            IEEE International Conference on Program Comprehension (ICPC): 2024, 2023, 2022, 2020<br />
+                            IEEE International Conference on Program Comprehension (ICPC): 2025, 2024, 2023, 2022, 2020<br />
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering
-                            (SANER): 2024, 2023, 2022, 2021, 2020<br />
+                            (SANER): 2025, 2024, 2023, 2022, 2021, 2020<br />
                             International Conference on Product-Focused Software Process Improvement (PROFES):
                             2023<br />
                             IEEE International Conference on Software Maintenance and Evolution (ICSME): 2023<br />
