--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="my-auto">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h1 class="mb-5">Di Nucci Mario</h1>
+                        <h1 class="mb-5">Di Nucci Dario</h1>
                     </div>
                 </div>
                 <div class="row">
