--- a/services.html
+++ b/services.html
@@ -134,9 +134,9 @@
                             IEEE International Conference on Program Comprehension (ICPC): 2025, 2024, 2023, 2022, 2020<br />
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering
                             (SANER): 2025, 2024, 2023, 2022, 2021, 2020<br />
+                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2024, 2023<br />
                             International Conference on Product-Focused Software Process Improvement (PROFES):
                             2023<br />
-                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2023<br />
                             IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM): 2023,
                             2022, 2021<br />
                             European Conference on Service-Oriented and Cloud Computing (ESOCC): 2023<br />
