--- a/teaching.html
+++ b/teaching.html
@@ -120,6 +120,16 @@
                                             target="blank">V. Deufemia</a>)
                                     </td>
                                 </tr>
+                                <tr>
+                                    <td>Funding and Management of Research Projects</td>
+                                    <td>PhD</td>
+                                    <td>University of Salerno</td>
+                                    <td>Winter 2024<br />
+                                        Winter 2023 (co-lectured with <a href="https://docenti.unisa.it/003241/en/home"
+                                            target="blank">A. De
+                                            Lucia</a>)
+                                    </td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
@@ -141,15 +151,6 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr></tr>
-                                    <td>Funding and Management of Research Projects</td>
-                                    <td>PhD</td>
-                                    <td>University of Salerno</td>
-                                    <td>Winter 2023 (co-lectured with <a href="https://docenti.unisa.it/003241/en/home"
-                                            target="blank">A. De
-                                            Lucia</a>)
-                                    </td>
-                                </tr>
                                 <tr>
                                     <td>Empirical Research Methods</td>
                                     <td>PhD</td>
