Add JSS Best Reviewer Award

--- a/publications.html
+++ b/publications.html
@@ -87,6 +87,10 @@
                     <ul class="fa-ul mb-0 small">
                         <li>
                             <i class="fa-li fa fa-trophy text-warning"></i> Best Reviewer Award - Elsevier Journal of
+                            Systems and Software, 2023
+                        </li>
+                        <li>
+                            <i class="fa-li fa fa-trophy text-warning"></i> Best Reviewer Award - Elsevier Journal of
                             Systems and Software, 2022
                         </li>
                         <li>
