Not yet permanent... :(

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="col-sm-8">
                         <h3 class="mb-2">About Me</h3>
                         <p>
-                            I am an associate professor at the Department of Computer Science
+                            I am an assistant professor at the Department of Computer Science
                             of the <a href="https://www.unisa.it/">University of Salerno</a>.<br />
                             My research is on <b>empirical software engineering</b>, particularly <b>software
                                 maintenance and evolution</b>, <b>software testing</b>, and <b>green software
