--- a/services.html
+++ b/services.html
@@ -77,6 +77,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Organizing Committee Member of SE events</h4>
                         <p class="card-text text-justify small">
+                            <a href="https://dsd-seaa2023.com/seaa/" target="blank">51st Euromicro Conference on
+                                Software Engineering and Advanced Applications</a>: Finance Chair<br />
                             <a href="https://dsd-seaa2023.com/seaa/" target="blank">28th International Conference on
                                 Evaluation and Assessment in Software Engineering</a>: Finance Chair<br />
                             <a href="https://dsd-seaa2023.com/seaa/" target="blank">49th Euromicro Conference on
@@ -131,10 +133,12 @@
                             in Practice Track (ICSE-SEIP): 2025, 2023<br />
                             IEEE/ACM International Conference on Mining Software Repositories (MSR): 2025, 2024, 2023,
                             2022<br />
-                            IEEE International Conference on Program Comprehension (ICPC): 2025, 2024, 2023, 2022, 2020<br />
+                            IEEE International Conference on Program Comprehension (ICPC): 2025, 2024, 2023, 2022,
+                            2020<br />
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering
                             (SANER): 2025, 2024, 2023, 2022, 2021, 2020<br />
-                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2024, 2023<br />
+                            IEEE International Conference on Software Maintenance and Evolution (ICSME): 2025, 2024,
+                            2023<br />
                             International Conference on Product-Focused Software Process Improvement (PROFES):
                             2023<br />
                             IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM): 2023,
@@ -173,15 +177,18 @@
                     <div class="card-body">
                         <h4 class="card-title">Invited Talks</h4>
                         <p class="card-text text-justify small">
+                            ML-based Detection of Security Fixes in Open-source Repositories. Final Meeting of the
+                            Horizon Europe MSCA project ProSVED, University of Trento, June 14th, 2024<br />
+                            Advancements in Quantum Software Engineering: Challenges and Empirical Insights. PhD Course
+                            in Quantum Software Engineering, Politecnico di Milano, March 26th, 2024<br />
                             The Quantum Frontier of Software Engineering and its Adoption. SWForum.eu: Workshop on
-                            Future Challenges in SE, Politecnico di Milano, Milan, Italy, June 27th, 2023<br />
+                            Future Challenges in SE, Politecnico di Milano, June 27th, 2023<br />
                             The Do's and Don'ts of Infrastructure Code: a Systematic Grey Literature Review. Dagstuhl
-                            Seminar 23082, Dagstuhl, Germany, February 21st, 2023<br />
+                            Seminar 23082, February 21st, 2023<br />
                             Machine Learning for Software Engineering: the New Gold Rush. Smart Services and Data-driven
-                            Societies Summit, University of Molise, Termoli, Italy, July 25th, 2022<br />
-                            Code Smell Detection: the Ecstasy of Machine Learning. Utrecht University, Utrecht, The
-                            Netherlands, October
-                            6th, 2021<br />
+                            Societies Summit, University of Molise, July 25th, 2022<br />
+                            Code Smell Detection: the Ecstasy of Machine Learning. Utrecht University, October 6th,
+                            2021<br />
                             Machine Learning for Software Engineering: the Good, the Bad, and the Ugly. University of
                             Milano Bicocca, Virtual, July 7th, 2021<br />
                             Improving Energy Efficiency of Mobile Applications in the Internet of Things. International
@@ -192,14 +199,14 @@
                             Summer School on Internet of Things, University of Salerno, Virtual, June 3rd, 2020<br />
                             Defect Prediction: using Machine Learning for focusing the Testing Effort. University of
                             Salerno, Virtual, March 25th, 2020<br />
-                            Mining Source Code^3: Mining Idioms, Usages and Edits. FOSDEM, Brussels, Belgium, February
-                            3rd, 2019<br />
+                            Mining Source Code^3: Mining Idioms, Usages and Edits. Free and Open Source Software
+                            Developers' European Meeting, February 3rd, 2019<br />
                             Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus
-                            Academy of Data Science, 's-Hertogenbosch, The Netherlands, March 9th, 2018<br />
+                            Academy of Data Science, March 9th, 2018<br />
                             Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus
-                            Academy of Data Science, 's-Hertogenbosch, The Netherlands, December 5th, 2017<br />
-                            Diagnose and Detect Energy Flaws of Android Apps. Vrije Universiteit Brussel, Brussels,
-                            Belgium, March 23rd, 2017
+                            Academy of Data Science, December 5th, 2017<br />
+                            Diagnose and Detect Energy Flaws of Android Apps. Vrije Universiteit Brussel, March 23rd,
+                            2017
                         </p>
                     </div>
                 </div>
