Fix broken links to conferences

--- a/services.html
+++ b/services.html
@@ -77,9 +77,9 @@
                     <div class="card-body">
                         <h4 class="card-title">Organizing Committee Member of SE events</h4>
                         <p class="card-text text-justify small">
-                            <a href="https://dsd-seaa2023.com/seaa/" target="blank">51st Euromicro Conference on
+                            <a href="https://dsd-seaa.com/seaa2025/" target="blank">51st Euromicro Conference on
                                 Software Engineering and Advanced Applications</a>: Finance Chair<br />
-                            <a href="https://dsd-seaa2023.com/seaa/" target="blank">28th International Conference on
+                            <a href="https://conf.researchr.org/home/ease-2024" target="blank">28th International Conference on
                                 Evaluation and Assessment in Software Engineering</a>: Finance Chair<br />
                             <a href="https://dsd-seaa2023.com/seaa/" target="blank">49th Euromicro Conference on
                                 Software Engineering and Advanced Applications</a>: Program Chair<br />
